// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should adopt the "backgroundColor" property 1`] = `
<header
  className="Header-bKPLEa hjSQSW"
/>
`;

exports[`<Header /> should render and match the snapshot 1`] = `
<header
  className="Header-bKPLEa heLhsp"
/>
`;
